added instagram link

--- a/index.html
+++ b/index.html
@@ -199,7 +199,12 @@
                         <a class="social-link rounded-circle text-white mr-3" href="#!"><i
                                 class="bi bi-mastodon"></i></a>
                     </li>
-
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/redstephen33/"
+                            class="social-link rounded-circle text-white mr-3">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                    </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Stephen Teet 2023</p>
             </div>
