pages html update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Stylish Portfolio - Start Bootstrap Template</title>
+        <title>Stephen Teet's Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -49,12 +49,16 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                        <h2>Data Scientist with solid experience and education in science and research.</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends
-                            at
-                            <a href="https://unsplash.com/">Unsplash</a>
-                            !
+                            Years of experience with collecting, managing, mapping and analyzing data for research.
+                            Expertise in Environmental Science and Agriculture.
+                        </p>
+                        <p>Masters Degree in Environmental Science from the University of North Carolina, Chapel
+                            Hill.</p>
+                        <p>Graduate Certificate GISc (Geographic Information Sciences) from the University of North
+                            Carolina, Chapel Hill</p>
+                        <p>Bachelors Degree Environmental Science from the University of New Mexico, Albuquerque
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What Goes Here?</a>
                     </div>
@@ -121,7 +125,7 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
+                                    <div class="h2">Classification</div>
                                     <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
                                 </div>
                             </div>
@@ -132,7 +136,7 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
+                                    <div class="h2">Clustering</div>
                                     <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice
                                         cream cone!</p>
                                 </div>
@@ -144,7 +148,7 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
+                                    <div class="h2">Neural Networks</div>
                                     <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar
                                         on top!</p>
                                 </div>
@@ -156,7 +160,7 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
+                                    <div class="h2">Natural Language Processing</div>
                                     <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.
                                     </p>
                                 </div>
@@ -170,9 +174,9 @@
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Just a few more things about me...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+                <h2 class="mb-4">A little more about me...</h2>
+                <a class="btn btn-xl btn-light me-4" href="#!">Coming</a>
+                <a class="btn btn-xl btn-dark" href="#!">Soon!</a>
             </div>
         </section>
         <!-- Map-->
